# WebScrapperC

./: .gitignore  CMakeLists.txt
src/: main.c  main.h
src/Enums/: Categories.h  Fields.h
src/HTMLGetter/: HTMLGetter.c  HTMLGetter.h
src/HTMLProcessor/: HTMLProcessor.c  HTMLProcessor.h
src/Structs/: JobEntry.h  JobsTable.h  baseURL.h  memory.h
src/utils/: htmlGetter.c  htmlGetter.h
