cmake_minimum_required(VERSION 3.10.2)
project(webScrapperProject VERSION 0.1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(LibXml2 REQUIRED)
find_package(CURL)
add_executable(webScrapper src/main.c src/utils/htmlGetter.c)
target_include_directories(webScrapper PRIVATE "${CMAKE_SOURCE_DIR}/src/")
target_link_libraries(webScrapper PRIVATE LibXml2::LibXml2)
target_link_libraries(webScrapper PRIVATE CURL::libcurl)